--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
   <!-- Give your page a title using the <title></title> tag below -->
-  <title>Aye<\title>
+<title>Jonah's Site</title>
+
+
 
 
 
@@ -11,20 +13,27 @@
 
   <div class="jumbotron">
     <!-- What's the name of your site? Use an H1 tag in the line below -->
+  <h1>Jonah's Site<h1>
 
     <!-- Include a short description by using an h2 or h3 tag (you decide what looks best) in the line below! -->
+    <h2>My Website</h2>
 
-  </div>
 
   <div class="jumbotron">
     <!-- What's this image's title? Try using an h3 or h4 tag for this! -->
     <!-- Include the GIF, JPG, or PNG image! You can include images by using the img tag. If you're saving an image, you'll want to save it in the `html-playground` directory. The image tag would look like this: <img src="my-image.png"> -->
+    <img src="https://media.giphy.com/media/9fbYYzdf6BbQA/giphy.gif">
 
     <!-- Give it a caption, too. You can use the p tag here -->
+    <p>Star Wars</p>
 
     <!-- Don't forget to include a link to where the image came from if it came from online. Gotta give credit. Use the a tag for this
     <a href="the-website-where-i-got-the-image> text for link </a>-->
+    <a href="http://giphy.com/gifs/star-james-wars-9fbYYzdf6BbQA">giphy</a>
+
   </div>
+nitrous < code < labs < html-playground 
+                                       
 
   <!-- Include as many gifs as you want! Note that we've wrapped the above cluster of HTML elements into a div. Play around with making similar divs (you can copy and paste the one above for guidance) to make a bunch of tiles to showcase all the gifs! -->
 
